feature(Interactive-sales-system): Корректировка класса юнит тест